--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
   <section id="gallery" class="fade-section">
     <h2>Album Ảnh</h2>
-    <div class="gallery-grid">
+    <div class="gallery-grid"><div id="lightbox" class="lightbox">
+  <span class="lightbox-close">&times;</span>
+  <img id="lightbox-img" src="" alt="">
+</div>
+
       <img src="assets/photo1.jpg" alt="">
       <img src="assets/photo2.jpg" alt="">
       <img src="assets/photo3.jpg" alt="">
