--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header id="home" class="fade-section">
+  <!-- Hero Section -->
+  <header id="home">
     <div class="overlay"></div>
-    <div class="hero-text">
-      <h1 class="couple-name">Văn Tam & Ngọc Sinh</h1>
+    <div class="hero-content">
+      <h1 class="names">Văn Tam & Ngọc Sinh</h1>
       <p class="date">20.11.2025</p>
       <button id="music-btn">🎵</button>
     </div>
   </header>
 
+  <!-- Story -->
   <section id="story" class="fade-section">
     <h2>Chuyện tình của chúng tôi</h2>
-    <p>Tình yêu của chúng tôi là hành trình dài với thật nhiều kỷ niệm đáng nhớ. Và hôm nay, chúng tôi rất hạnh phúc khi được chia sẻ khoảnh khắc thiêng liêng này cùng mọi người 💕</p>
+    <p>Tình yêu của chúng tôi là hành trình đầy kỷ niệm, niềm vui và hạnh phúc. 
+       Hôm nay, chúng tôi thật sự hân hoan khi được chia sẻ khoảnh khắc thiêng liêng này cùng tất cả mọi người 💕</p>
   </section>
 
+  <!-- Countdown -->
   <section id="countdown" class="fade-section">
     <h2>Đếm ngược đến ngày cưới</h2>
     <div id="timer">
@@ -32,28 +36,29 @@
     </div>
   </section>
 
+  <!-- Gallery -->
   <section id="gallery" class="fade-section">
     <h2>Album Ảnh</h2>
-    <div class="gallery-grid"><div id="lightbox" class="lightbox">
-  <span class="lightbox-close">&times;</span>
-  <img id="lightbox-img" src="" alt="">
-</div>
-
+    <div class="gallery-grid">
       <img src="assets/photo1.jpg" alt="">
       <img src="assets/photo2.jpg" alt="">
       <img src="assets/photo3.jpg" alt="">
       <img src="assets/photo4.jpg" alt="">
     </div>
+
+    <!-- Lightbox -->
+    <div id="lightbox" class="lightbox">
+      <span class="lightbox-close">&times;</span>
+      <img id="lightbox-img" src="" alt="">
+    </div>
   </section>
 
+  <!-- Info -->
   <section id="info" class="fade-section">
     <h2>Thông tin Lễ cưới</h2>
     <p><strong>Thời gian:</strong> 10:00 sáng, ngày 20 tháng 11 năm 2025</p>
     <p><strong>Địa điểm:</strong> Gần chùa Linh Cốc, Ninh Hải, Hoa Lư, Ninh Bình</p>
-    <iframe 
-      src="https://www.google.com/maps?q=ch%C3%B9a%20Linh%20C%E1%BB%91c%2C%20Ninh%20H%E1%BA%A3i%2C%20Hoa%20L%C6%B0%2C%20Ninh%20B%C3%ACnh&output=embed" 
-      width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
+    <iframe src="https://www.google.com/maps?q=ch%C3%B9a%20Linh%20C%E1%BB%91c%2C%20Ninh%20H%E1%BA%A3i%2C%20Hoa%20L%C6%B0%2C%20Ninh%20B%C3%ACnh&output=embed" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
 
   <footer>
